--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@iconify/react": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
